--- a/src/aura/CadenceActionsDetail/CadenceActionsDetail.cmp
+++ b/src/aura/CadenceActionsDetail/CadenceActionsDetail.cmp
@@ -5,6 +5,7 @@
     <aura:attribute name="pList" type="List"/>
     <!-- action type -->
     <aura:attribute name="actionType" type="String"/>
+    <aura:attribute name="actionName" type="String"/>
     <!-- Action List-->
     <aura:attribute name="actionList" type = "List" /> 
     <!-- All Actions List-->
@@ -71,8 +72,8 @@
     <aura:attribute name="caIdsList" type="List"/>
     <aura:attribute name="showModal" type="Boolean" default="false"/>
     <aura:attribute name="UpdateFieldList" type="List"/>
-    
-    
+    <aura:attribute name="isNewAction" type="Boolean" default="false"/>
+    <aura:attribute name="showNewActionName" type="Boolean" default="false"/>
     <tr  class = "slds-m-around--large " >
         <td class="rdna-table-rows rdna-field-values">
             <div class="rdna-div">
@@ -91,9 +92,13 @@
                 {!' ' + v.actionType} 
             </div>  
         </td>
-        <td class="rdna-table-rows rdna-field-values">  
+        <td class="rdna-table-rows rdna-field-values"> 
+            <aura:if isTrue="{!v.showNewActionName}">
+             <div class="slds-truncate rdna-div" aura:id="detailDiv1" title="Name">{!v.actionName}</div>  
+            <aura:set attribute="else">
             <div class="slds-truncate rdna-div" aura:id="detailDiv1" title="Name">{!v.actionObject.name}</div>
-        </td>
+            </aura:set></aura:if>
+            </td>
         <td class="rdna-table-rows rdna-field-values">
             <aura:if isTrue="{!v.cadenceAction.triggerType == 'Immediate'}">
                 <span   aura:id="detailDiv1"> Immediate </span>
@@ -140,7 +145,7 @@
                             <span class="slds-p-top_medium slds-page-header__row rdna-field-values-bold rdna-set-line-height slds-truncate">Action Details</span>
                             <div class="slds slds-form-element__row slds-size_1-of-1 slds-p-right_large slds-p-top_small ">
                                 <div aura:id="updatePriorityChanges" class="slds-form-element__control slds-size_1-of-4">
-                                    <lightning:select aura:id="formValidationId" name="Action" 
+                                    <lightning:select aura:id="formValidationId_name" name="Action" 
                                                       label="Action" required="true" 
                                                       value="{!v.cadenceAction.actionId}" 
                                                       onchange="{!c.setActionObject}"
