--- a/src/aura/ActionDetails/ActionDetails.cmp
+++ b/src/aura/ActionDetails/ActionDetails.cmp
@@ -31,6 +31,7 @@
 <aura:attribute name="activationtypeList" type="List" default="['Automatic', 'Manual']" />
 <aura:attribute name="currentStep" type="string" default="1"/>
 <aura:attribute name="isNextEnable" type="boolean" default="false"/>
+<aura:attribute type="List" name="rowActionTemplateList"/> 
 <aura:method name="actionDetailsMethod" action="{!c.createAction}">
 </aura:method>
 <!-- Body Start -->
