Code commited for feature/SFDC-506-QA Issue Next Disable Button

--- a/src/aura/ActionBuilder/ActionBuilder.cmp
+++ b/src/aura/ActionBuilder/ActionBuilder.cmp
@@ -63,6 +63,13 @@
                 <div>
                     <lightning:button class="rdna-button-save rdna-button-text-save slds-text-align_center slds-m-top_large slds-p-left_large slds-p-right_large slds-m-right_large" aura:id="Next" label="Next" onclick="{!c.onNext}"/>
                 </div>
+                <aura:set attribute="else">
+                    <aura:if isTrue = "{!and(or(v.currentStep == '1' , v.currentStep == 1) , not(v.isNextEnable) ) }" >
+                        <div>
+                            <lightning:button class="rdna-button rdna-button-text slds-text-align_center slds-m-top_large  slds-m-right_medium slds-p-left_large slds-p-right_large" aura:id="nextDisable" label="Next"/>
+                        </div>
+                    </aura:if>
+                </aura:set>  
             </aura:if>
             <aura:if isTrue = "{!and(or(v.currentStep == '2' , v.currentStep == 2) , not(v.isNextEnable) ) }" >
             <div>
