--- a/src/aura/ActionDetails/ActionDetails.cmp
+++ b/src/aura/ActionDetails/ActionDetails.cmp
@@ -67,7 +67,7 @@
                 <div class="slds-form-element__row">
 				
 				<div class="rdna-div slds-align_absolute-center" required="true" messageWhenValueMissing="Please Select Action Type." disabled = "{!v.disableActionType}">
-						<div><a onclick="{!c.createCallAction}" disabled = "{!v.disableActionType}">              
+						<div><a onclick="{!c.selectCallAction}" disabled = "{!v.disableActionType}">              
 						<aura:if isTrue="{!v.newAction.type == 'Call'}">
 							<img class = "actions-icon" src="{!$Resource.cadence_icons + '/action-icons/select/call.png'}"/> 
 							<aura:set attribute="else">
@@ -78,7 +78,7 @@
 						<p class="slds-m-left-xx_large slds-p-top_small rdna-name">Call</p>
 					</div>
 					<div>
-						<a onclick="{!c.createEmailAction}" disabled = "{!v.disableActionType}">
+						<a onclick="{!c.selectEmailAction}" disabled = "{!v.disableActionType}">
 							<aura:if isTrue="{!v.newAction.type == 'Email'}">
 								<img class = "actions-icon rdna-icon" src="{!$Resource.cadence_icons + '/action-icons/select/email.png'}"/> 
 								<aura:set attribute="else">
@@ -89,7 +89,7 @@
 						<p class="slds-m-left-x_large slds-p-top_small rdna-name-styling">Email</p>
 					</div>
 					<div>
-						<a onclick="{!c.createSMSAction}" disabled = "{!v.disableActionType}">
+						<a onclick="{!c.selectSMSAction}" disabled = "{!v.disableActionType}">
 							<aura:if isTrue="{!v.newAction.type == 'SMS'}">
 								<img class = "actions-icon rdna-icon" src="{!$Resource.cadence_icons + '/action-icons/select/sms.png'}"/> 
 								<aura:set attribute="else">
@@ -100,7 +100,7 @@
 						<p class="slds-m-left-xx_large slds-p-top_small rdna-name-styling">SMS</p>
 					</div>
 					<div>
-						<a onclick="{!c.createTaskAction}" disabled = "{!v.disableActionType}">
+						<a onclick="{!c.selectTaskAction}" disabled = "{!v.disableActionType}">
 							<aura:if isTrue="{!v.newAction.type == 'Task'}">
 								<img class = "actions-icon rdna-icon" src="{!$Resource.cadence_icons + '/action-icons/select/task.png'}"/> 
 								<aura:set attribute="else">
