--- a/src/aura/CadenceActionsDetail/CadenceActionsDetail.cmp
+++ b/src/aura/CadenceActionsDetail/CadenceActionsDetail.cmp
@@ -145,7 +145,7 @@
                             <span class="slds-p-top_medium slds-page-header__row rdna-field-values-bold rdna-set-line-height slds-truncate">Action Details</span>
                             <div class="slds slds-form-element__row slds-size_1-of-1 slds-p-right_large slds-p-top_small ">
                                 <div aura:id="updatePriorityChanges" class="slds-form-element__control slds-size_1-of-4">
-                                    <lightning:select aura:id="formValidationId_name" name="Action" 
+                                    <lightning:select aura:id="formValidationId" name="Action" 
                                                       label="Action" required="true" 
                                                       value="{!v.cadenceAction.actionId}" 
                                                       onchange="{!c.setActionObject}"
