Code Commited for feature/SFDC-362-updated Code commited

--- a/src/pages/LeadDetailSequenceList.page
+++ b/src/pages/LeadDetailSequenceList.page
@@ -1,4 +1,4 @@
-<apex:page standardController="Lead" extensions="ManualSequenceAssociateController,GetNamespace" recordSetVar="selectedRecords" sidebar="false" showHeader="true">
+<apex:page standardController="Lead" extensions="ManualSequenceAssociateController,GetNamespace" sidebar="false" showHeader="true">
     <script src="/lightning/lightning.out.js"/>
     <apex:slds />
     <apex:includeLightning />
