SFDC-549:In the entrance/exit criteria if I am giving space(s) with the field value of text and phone number fields then I am able to save sequence

--- a/src/aura/DynamicFieldRow/DynamicFieldRow.cmp
+++ b/src/aura/DynamicFieldRow/DynamicFieldRow.cmp
@@ -113,6 +113,7 @@
                                                                          name="inputString"  type="tel"
                                                                          value="{!v.objectInstance.value}"
                                                                          placeholder = "Enter Phone no."
+																		 onblur='{!c.validateEmptyInput}'
                                                                          messageWhenBadInput = "Please Enter Phone no."
                                                                          required="true"/>
                                                         <aura:set attribute="else">
@@ -136,6 +137,7 @@
                                                                                              name="inputString" 
                                                                                              value="{!v.objectInstance.value}"
                                                                                              placeholder = "Enter Details"
+																							 onblur='{!c.validateEmptyInput}'
                                                                                              messageWhenBadInput = "Please Enter Detail"
                                                                                              required="true"/>
                                                                         </aura:set>
