--- a/src/pages/ContactDetailSequenceList.page
+++ b/src/pages/ContactDetailSequenceList.page
@@ -2,13 +2,13 @@
     <script src="/lightning/lightning.out.js"/>
     <apex:slds />
     <apex:includeLightning />
-    <div id="myDivId9" />
+    <div id="myDivId9"/>
         <script>
         var myUserContext = "{!$User.UITheme}";
         $Lightning.use("{!namespace}:ManualSequenceAssociateApp", function() {
             $Lightning.createComponent(
                 "{!namespace}:ManualSequenceAssociate",
-                {themeName: myUserContext, participants: "{!participants}", recordType:"{!recordType}"},
+                {themeName: myUserContext, participantId: "{!participantId}", recordType:"{!recordType}"},
                 "myDivId9",
                 function(cmp) {               
                 });
